--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -8,8 +8,28 @@
 <body>
 <h1>My Super Fancy Spa</h1>
 <div id = "clientProfile">
+    <h2> My Profile </h2>
+    <p th:text = "${name}"></p>
+    <p th:text = "${skintype}"></p>
+    <p th:text = "${manipedi}"></p>
+
 </div>
 <div id = "servicesMenu">
+    <th:block>
+        <table >
+            <tr>
+                <th>appropriateFacials</th>
+            </tr>
+            <tr th:each ="facial: ${appropriateFacials}">
+                <td th:text = "${facial}" ></td>
+            </tr>
+        </table>
+    </th:block>
+    <div th:if = ${"manipedi== manicure}">
+    <h3 >Manicure</h3>
+
 </div>
+</div>
+
 </body>
 </html>
